--- a/index.html
+++ b/index.html
@@ -88,21 +88,44 @@
     </div>
   </div>
 </div>
-<a class="left carousel-control" href=""
+<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
+
+<a class="right carousel-control" href="#myCarousel" role="button" data-slide="prev">
+  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+  <span class="sr-only">Next</span>
+</a>
+</div>
+
+
+
+  <!-- /Carousel ----------------------->
+<div class="container resources">
+
+  <div class="row">
+    <div class="col-lg-4">
+      <img class="img-circle" src="img/zillabeach.jpg" alt="Breed Match" width="140" height="140">
+      <h2>Pet License</h2>
+      <p>Check current status of your pet's license</p>
+      <p>Placeholder for form</p>
+      <p>Placeholder for api data</p>
+    </div>
+</div>
+  <div class="col-lg-4">
+    <img class="img-circle" src="img/guvysleep.jpg" alt="Location" width="140" height="140">
+    <h2>Pet License Sales</h2>
+    <p>Placeholder for api data</p>
+    <p>Placeholder for form?</p>
+
+
+
 
 </div>
 
 
 
 
-
-
-
-  <!-- /Carousel ----------------------->
-
-
-
-
-
-
+</body>
 </html>
