--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </div>
   </div>
 
+
   <!-- /Navbar ------------------------>
 
   <!-- Carousel ------------------------>
@@ -60,16 +61,16 @@
     <li data-target="myCarousel" data-slide-to="1"></li>
     <li data-target="myCarousel" data-slide-to="2"></li>
   </ol>
-  <div class="carousel-inner" role="listbox">
 
+  <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img class="first-slide" src="img/zillabeach.jpg" alt="First slide">
-      <div class="container">
-        <div class="carousel-caption">
-          <p><a class="btn btn-sm btn-info" href="#" role="button">Pet Licensing</a></p>
-        </div>
+    <div class="container">
+      <div class="carousel-caption">
+        <p><a class="btn btn-sm btn-info" href="#" role="button">Pet Licensing</a></p>
       </div>
     </div>
+  </div>
 
     <div class="item">
       <img class="second-slide" src="img/guvypic.jpg" alt="Second Slide">
@@ -88,6 +89,8 @@
     </div>
   </div>
 </div>
+</div>
+
 <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
   <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
   <span class="sr-only">Next</span>
@@ -100,30 +103,101 @@
 </div>
 
 
-
   <!-- /Carousel ----------------------->
+    <!-- License ----------------------->
+
 <div class="container resources">
 
   <div class="row">
-    <div class="col-lg-4">
+
+    <div class="col-sm-4 text-center">
       <img class="img-circle" src="img/zillabeach.jpg" alt="Breed Match" width="140" height="140">
-      <h2>Pet License</h2>
+      <h2>License Status Form</h2>
       <p>Check current status of your pet's license</p>
       <p>Placeholder for form</p>
       <p>Placeholder for api data</p>
     </div>
+
+    <div class="col-sm-4 text-center">
+      <img class="img-circle" src="img/guvypic.jpg" alt="Breed Match" width="140" height="140">
+      <h2>License Status Return</h2>
+      <p>Check current status of your pet's license</p>
+      <p>Placeholder for form</p>
+      <p>Placeholder for api data</p>
+    </div>
+
+    <div class="col-sm-4 text-center">
+      <img class="img-circle" src="img/guvysleep.jpg" alt="Location" width="140" height="140">
+      <h2>License Sales</h2>
+      <p>Placeholder for api data</p>
+      <p>Placeholder for form?</p>
+    </div>
+
+  </div>
+
+  <!-- /License ----------------------->
+    <!-- Dog Name Dog Breeds ----------------------->
+
+    <hr class="featurette-divider">
+
+    <div class="row featurette">
+      <div class="col-md-7 text-center">
+        <h2 class="featurette-heading">Popular Names</h2>
+        <p>Most popular dog names in Seattle</p>
+      </div>
+      <div class="col-md-5 text-center">
+        <img class="img-circle" src="img/guvyzill.jpg" alt="Location" width="140" height="140">
+    </div>
+  </div>
+
+  <hr class="featurette-divider">
+
+  <div class="row featurette">
+    <div class="col-md-7 col-md-push-5 text-center">
+      <h2 class="featurette-heading">Popular Breeds</h2>
+      <p>Most popular breeds in Seattle</p>
+    </div>
+    <div class="col-md-5 col-md-pull-7 text-center">
+      <img class="img-circle" src="img/guvyzillsleep.jpg" alt="Location" width="140" height="140">
+  </div>
 </div>
-  <div class="col-lg-4">
-    <img class="img-circle" src="img/guvysleep.jpg" alt="Location" width="140" height="140">
-    <h2>Pet License Sales</h2>
-    <p>Placeholder for api data</p>
-    <p>Placeholder for form?</p>
+<!-- /dog name and breeds ----------------------->
+<!-- Offleash & Resources ----------------------->
 
+<hr class="featurette-divider">
 
-
-
+<div class="row featurette">
+  <div class="col-md-7 text-center">
+    <h2 class="featurette-heading">Off-Leash Parks</h2>
+    <p>Off-Leash Parks of Seattle</p>
+  </div>
+  <div class="col-md-5 text-center">
+    <img class="img-circle" src="https://www.bringfido.com/map/-122.347276/47.620973/12/r/attraction/parks/city/seattle_wa_us/l/" alt="Location" width="140" height="140">
+</div>
 </div>
 
+<hr class="featurette-divider">
+
+<div class="row featurette">
+<div class="col-md-7 col-md-push-5 text-center">
+  <h2 class="featurette-heading">Resources</h2>
+  <p>Groomers to Organic Food Stores</p>
+</div>
+<div class="col-md-5 col-md-pull-7 text-center">
+  <img class="img-circle" src="https://www.bringfido.com/map/-122.347276/47.620973/12/r/attraction/parks/city/seattle_wa_us/l/" alt="Location" width="140" height="140">
+</div>
+</div>
+
+<!-- /Offleash & Resources ----------------------->
+<!-- footer ----------------------->
+<footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2017 seaPUP, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
+
+    </div><!-- /.container -->
+
+    <!-- /footer ----------------------->
 
 
 
