--- a/index.html
+++ b/index.html
@@ -149,13 +149,22 @@
             </div>
 
             <div class="form-group">
-                <!-- <div class="col-sm-offset-2 col-sm-10"> -->
                     <button type="submit" class="btn btn-default">Submit</button>
-                <!-- </div> -->
             </div>
         </form>
         <div class="alert alert-warning hidden" id="warning-alert">
-            Your Dog isn't licensed Tisk Tisk.
+            Looks like you got a fugitive-Click Here to register your puppy today
+            <a href="http://blue.kingcounty.gov/exec/recordslicensing/petlicenses/">
+        </div>
+        <div class="alert alert-warning hidden" id="multiple-results">
+            While your puppy is unique -their name is not please select a Zip and Breed.
+            <a href="http://blue.kingcounty.gov/exec/recordslicensing/petlicenses/">
+        </div>
+        <div class="alert alert-warning hidden" id="match-results">
+          <p>Your Puppy is Street Legal</p>
+          <p id="#license_number"></p>
+          <p id="#license_issue_date"></p>
+
         </div>
     </div>
   </div>
@@ -163,32 +172,7 @@
 
 
   <!-- /License ----------------------->
-    <!-- Dog Name Dog Breeds ----------------------->
 
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
-      <div class="col-md-7 text-center">
-        <h2 class="featurette-heading">Popular Names</h2>
-        <p>Most popular dog names in Seattle</p>
-      </div>
-      <div class="col-md-5 text-center">
-        <img class="img-circle" src="img/guvyzill.jpg" alt="Location" width="140" height="140">
-    </div>
-  </div>
-
-  <hr class="featurette-divider">
-
-  <div class="row featurette">
-    <div class="col-md-7 col-md-push-5 text-center">
-      <h2 class="featurette-heading">Popular Breeds</h2>
-      <p>Most popular breeds in Seattle</p>
-    </div>
-    <div class="col-md-5 col-md-pull-7 text-center">
-      <img class="img-circle" src="img/guvyzillsleep.jpg" alt="Location" width="140" height="140">
-  </div>
-</div>
-<!-- /dog name and breeds ----------------------->
 <!-- Offleash & Resources ----------------------->
 
 <hr class="featurette-divider">
