--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-            <a class="navbar-brand" href="#">seattlePUP</a>
+            <a class="navbar-brand" href="#">seattlePUP-ID</a>
           </div>
 
           <div id="navbar" class="navbar-collapse collapse">
@@ -110,7 +110,7 @@
 
   <div class="row">
 
-    <div class="col-sm-6 text-center">
+    <!-- <div class="col-md-6 col-sm-6 hidden text-center ">
       <h2>Why License Your Dog</h2>
     <img class="img-rounded" src="img/police.jpg" alt="License Check" width="140" height="140">
     <ul class="list-group">
@@ -119,9 +119,9 @@
         <li class="list-group-item">It's The Law</li>
     </ul>
 
-  </div>
+  </div> -->
 
-      <div class="col-sm-6 text-center">
+      <div class="col-sm-12 text-center">
         <h2>ID Check</h2>
       <img class="img-circle" src="img/dogLicense.jpg" alt="License Check" width="140" height="140">
 
@@ -180,16 +180,16 @@
         </div>
 
         <div class="alert alert-warning hidden" id="match-results">
-          <p>Your Puppy is Street Legal</p>
+          <p>Your Puppy is Street Legal Let's Hit the Park</p>
         </div>
     </div>
   </div>
-</div>
+
 
 
   <!-- /License ----------------------->
 
-<!-- Offleash & Resources ----------------------->
+<!-- Offleash  ----------------------->
 <hr></hr>
 
 <div class="row">
@@ -198,14 +198,32 @@
     <h2>Seattle Off-Leash</h2>
   </div>
 </div>
+
+
+
+<!-- /Offleash  ----------------------->
+
+<!-- Pet License Sale  ----------------------->
+<hr></hr>
+
+<div class="row">
+
+  <div class="col-sm-12 text-center" id="petLicenseSales">
+    <h2>Pet License Sale</h2>
+  </div>
 </div>
 
 
-<!-- /Offleash & Resources ----------------------->
+
+<!-- /Pet License Sale ----------------------->
+
+
+
+
 <!-- footer ----------------------->
 <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 seaPUP, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2017 seaPUP-ID, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div><!-- /.container -->
