--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">About</a></li>
               <li><a href="#">Pet Licensing</a></li>
-              <li><a href="#">Off-Leash Parks</a></li>
-              <li><a href="#">Resources</a></li>
+              <li><a href="#">License Sales</a></li>
+              <li><a href="#">Off-Leash</a></li>
             </ul>
           </div>
         </div>
@@ -110,16 +110,6 @@
 
   <div class="row">
 
-    <!-- <div class="col-md-6 col-sm-6 hidden text-center ">
-      <h2>Why License Your Dog</h2>
-    <img class="img-rounded" src="img/police.jpg" alt="License Check" width="140" height="140">
-    <ul class="list-group">
-        <li class="list-group-item">Fine $200</li>
-        <li class="list-group-item">Safe Return</li>
-        <li class="list-group-item">It's The Law</li>
-    </ul>
-
-  </div> -->
 
       <div class="col-sm-12 text-center">
         <h2>ID Check</h2>
@@ -189,6 +179,19 @@
 
   <!-- /License ----------------------->
 
+  <!-- Pet License Sale  ----------------------->
+  <hr></hr>
+
+  <div class="row">
+
+    <div class="col-xs-12 text-center" id="petLicenseSales">
+      <h2>Pet License Sale</h2>
+    </div>
+  </div>
+
+
+<!-- /Pet License Sale ----------------------->
+
 <!-- Offleash  ----------------------->
 <hr></hr>
 
@@ -198,26 +201,10 @@
     <h2>Seattle Off-Leash</h2>
   </div>
 </div>
-
-
-
-<!-- /Offleash  ----------------------->
-
-<!-- Pet License Sale  ----------------------->
-<hr></hr>
-
-<div class="row">
-
-  <div class="col-sm-12 text-center" id="petLicenseSales">
-    <h2>Pet License Sale</h2>
-  </div>
 </div>
 
 
-
-<!-- /Pet License Sale ----------------------->
-
-
+<!-- /Offleash  ----------------------->
 
 
 <!-- footer ----------------------->
@@ -226,7 +213,7 @@
         <p>&copy; 2017 seaPUP-ID, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
-    </div><!-- /.container -->
+    </div>
 
     <!-- /footer ----------------------->
 
