--- a/index.html
+++ b/index.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang = 'en'>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name='description' content="seattle resources for dog owners">
-    <meta name="author" content="Erica Rottman">
-    <link rel="icon" href="img/guvyzill.jpg">
-    <title>seattlePUP-ID</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name='description' content="seattle resources for dog owners">
+  <meta name="author" content="Erica Rottman">
+  <link rel="icon" href="img/guvyzill.jpg">
+  <title>seattlePUP-ID</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script defer src="main.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script defer src="main.js" charset="utf-8"></script>
 
 
-    <link href="carousel.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-  </head>
+  <link href="carousel.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
+</head>
 
-  <!-- Navbar ------------------------>
-  <body>
-    <div class="navbar-wrapper">
-      <div class="container">
+<!-- Navbar ------------------------>
+<body>
+  <div class="navbar-wrapper">
+    <div class="container">
 
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target ="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target ="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
             <a class="navbar-brand" href="#">seattlePUP-ID</a>
           </div>
 
@@ -54,161 +54,182 @@
   <!-- /Navbar ------------------------>
 
   <!-- Carousel ------------------------>
-<div id="myCarousel" class="carousel slide"  data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="myCarousel" data-slide-to="1"></li>
-    <li data-target="myCarousel" data-slide-to="2"></li>
-  </ol>
+  <div id="myCarousel" class="carousel slide"  data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="myCarousel" data-slide-to="1"></li>
+      <li data-target="myCarousel" data-slide-to="2"></li>
+    </ol>
 
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img class="first-slide" src="img/zillabeach.jpg" alt="First slide">
-    <div class="container">
-      <div class="carousel-caption">
-        <p><a class="btn btn-sm btn-info" href="#licenseSearch" role="button">ID Check</a></p>
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img class="first-slide" src="img/zillabeach.jpg" alt="First slide">
+        <div class="container">
+          <div class="carousel-caption">
+            <p><a class="btn btn-sm btn-info" href="#licenseSearch" role="button">ID Check</a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <img class="second-slide" src="img/guvysleep.jpg" alt="Second Slide">
+        <div class="container">
+          <div class="carousel-caption">
+            <p><a class="btn btn-sm btn-info" href="#petLicenseSales" role="button">License Sales</a></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="item">
+        <img class="third-slide" src="img/guvypic.jpg" alt="Third Slide">
+        <div class="container">
+          <div class="carousel-caption">
+            <p><a class="btn btn-sm btn-info" href="#offLeashContainer" role="button">Off Leash Parks</a></p>
+          </div>
+        </div>
       </div>
     </div>
+
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
-
-    <div class="item">
-      <img class="second-slide" src="img/guvysleep.jpg" alt="Second Slide">
-    <div class="container">
-      <div class="carousel-caption">
-        <p><a class="btn btn-sm btn-info" href="#petLicenseSales" role="button">License Sales</a></p>
-      </div>
-    </div>
-  </div>
-
-  <div class="item">
-    <img class="third-slide" src="img/guvypic.jpg" alt="Third Slide">
-  <div class="container">
-    <div class="carousel-caption">
-      <p><a class="btn btn-sm btn-info" href="#offLeashContainer" role="button">Off Leash Parks</a></p>
-    </div>
-  </div>
-</div>
-</div>
-
-<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-  <span class="sr-only">Next</span>
-</a>
-
-<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-  <span class="sr-only">Next</span>
-</a>
-</div>
 
 
   <!-- /Carousel ----------------------->
-    <!-- License ----------------------->
+  <!-- License ----------------------->
+    <div class="container resources">
+        <div class="row">
 
-<div class="container resources">
+  <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel panel-default">
+      <div class="panel-heading" role="tab" id="headingOne">
+        <h4 class="panel-title">
+          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Puppy ID Check
+          </a>
+        </h4>
+      </div>
+      <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+        <div class="panel-body">
 
-  <div class="row">
 
 
-      <div class="col-sm-12 text-center">
-        <h2>ID Check</h2>
-      <img class="img-circle" src="img/dogLicense.jpg" alt="License Check" width="140" height="140">
 
 
-        <form id="licenseSearch" method="post" class="form-horizontal">
-            <div class="form-group">
-                <label for="animal_s_name" class="control-label">Pet Name:</label>
+              <div class="col-sm-12 text-center">
+                <img class="img-circle" src="img/dogLicense.jpg" alt="License Check" width="140" height="140">
+
+
+                <form id="licenseSearch" method="post" class="form-horizontal">
+                  <div class="form-group">
+                    <label for="animal_s_name" class="control-label">Pet Name:</label>
                     <input type="text" class="form-control" name="animal_s_name" value="Puppy's Name" id="animal_s_name">
 
-            </div>
-
-            <div id="extraFilters" class="hidden">
-
-                <div class="form-group">
-                    <label for="zip_code" class="control-label">Postal Code:</label>
-                        <select class="form-control" id="zip_code" name="zip_code">
-                          <option value="" selected disabled>Please select</option>
-                      </select>
                   </div>
 
-                <div class="form-group">
-                    <label for="primary_breed" class="control-label">Breed:</label>
-                        <select class="form-control" id="primary_breed" name="primary_breed">
-                          <option value="" selected disabled>Please select</option>
+                  <div id="extraFilters" class="hidden">
+
+                    <div class="form-group">
+                      <label for="zip_code" class="control-label">Postal Code:</label>
+                      <select class="form-control" id="zip_code" name="zip_code">
+                        <option value="" selected disabled>Please select</option>
                       </select>
                     </div>
-              </div>
 
-              <div id="extraFiltersTwo" class="hidden">
+                    <div class="form-group">
+                      <label for="primary_breed" class="control-label">Breed:</label>
+                      <select class="form-control" id="primary_breed" name="primary_breed">
+                        <option value="" selected disabled>Please select</option>
+                      </select>
+                    </div>
+                  </div>
 
-                      <div class="form-group">
-                          <label for="license_number" class="control-label">License Number:</label>
-                              <select class="form-control glowing-border" id="license_number" name="license_number">
-                            </select>
-                          </div>
+                  <div id="extraFiltersTwo" class="hidden">
 
-                      <div class="form-group">
-                          <label for="license_issue_date" class="control-label">Issue Date:</label>
-                              <select class="form-control glowing-border" id="license_issue_date" name="license_issue_date">
+                    <div class="form-group">
+                      <label for="license_number" class="control-label">License Number:</label>
+                      <select class="form-control glowing-border" id="license_number" name="license_number">
+                      </select>
+                    </div>
 
-                            </select>
-                        </div>
+                    <div class="form-group">
+                      <label for="license_issue_date" class="control-label">Issue Date:</label>
+                      <select class="form-control glowing-border" id="license_issue_date" name="license_issue_date">
+
+                      </select>
+                    </div>
                   </div>
 
 
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary">Submit</button>
-              <button id="reset" type="reset" class="btn btn-default">Clear</button>
+                  <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button id="reset" type="reset" class="btn btn-default">Clear</button>
+                  </div>
+                </form>
+
+                <div class="alert alert-danger hidden" id="warning-alert">
+                  <p><a href="https://web7.seattle.gov/fas/pets/GettingStarted.aspx">Looks Like You Are Harboring a Fugitive!  Click On This Link to License Your Puppy Today</p>
+                  </div>
+                  <div class="alert alert-warning hidden" id="multiple-results">
+                    Every puppy is unique - but sometimes names are not. Please select a Zip and Breed.
+                  </div>
+
+                  <div class="alert alert-success hidden" id="match-results">
+                    <p>Your Puppy is Street Legal Let's Hit the Park</p>
+                  </div>
+                </div>
+              </div>
+
+            </div>
           </div>
-        </form>
-
-        <div class="alert alert-danger hidden" id="warning-alert">
-            <p><a href="https://web7.seattle.gov/fas/pets/GettingStarted.aspx">Looks Like You Are Harboring a Fugitive!  Click On This Link to License Your Puppy Today</p>
-        </div>
-        <div class="alert alert-warning hidden" id="multiple-results">
-            Every puppy is unique - but sometimes names are not. Please select a Zip and Breed.
         </div>
 
-        <div class="alert alert-success hidden" id="match-results">
-          <p>Your Puppy is Street Legal Let's Hit the Park</p>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingTwo">
+            <h4 class="panel-title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                License Sales
+              </a>
+            </h4>
+          </div>
+          <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+            <div class="panel-body">
+              <div class="col-sm-12 text-center" id="petLicenseSales">
+              </div>
+
+            </div>
+          </div>
         </div>
-    </div>
-  </div>
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingThree">
+            <h4 class="panel-title">
+              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Off Leash Parks
+              </a>
+            </h4>
+          </div>
+          <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+            <div class="panel-body">
+              <div class="col-xs-12 text-center" id="offLeashContainer">
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
-  <!-- /License ----------------------->
 
-  <!-- Pet License Sale  ----------------------->
-  <hr></hr>
-
-  <div class="row">
-
-    <div class="col-xs-12 text-center" id="petLicenseSales">
-      <h2>Pet License Sale</h2>
-    </div>
-  </div>
-
-
-<!-- /Pet License Sale ----------------------->
-
-<!-- Offleash  ----------------------->
-<hr></hr>
-
-<div class="row">
-
-  <div class="col-sm-12 text-center" id="offLeashContainer">
-    <h2>Seattle Off-Leash</h2>
-  </div>
-</div>
-</div>
-
-
-<!-- /Offleash  ----------------------->
-
-
-<!-- footer ----------------------->
-<footer>
+      <!-- footer ----------------------->
+      <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
         <p>&copy; 2017 seaPUP-ID, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
@@ -219,5 +240,5 @@
 
 
 
-</body>
-</html>
+  </body>
+  </html>
