updates to filter search

--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
 
 
               <div class="col-sm-12 text-center">
-                <img class="img-circle" src="img/dogLicense.jpg" alt="License Check" width="140" height="140">
+                <img class="img-circle status-pic" src="img/dogLicense.jpg" alt="License Check" width="140" height="140">
 
 
                 <form id="licenseSearch" method="post" class="form-horizontal">
                   <div class="form-group">
                     <label for="animal_s_name" class="control-label">Pet Name:</label>
-                    <input type="text" class="form-control" name="animal_s_name" value="Puppy's Name" id="animal_s_name">
+                    <input type="text" class="form-control" name="animal_s_name" placeholder="Enter Puppy's Name" id="animal_s_name">
 
                   </div>
 
@@ -178,7 +178,7 @@
                   <p><a href="https://web7.seattle.gov/fas/pets/GettingStarted.aspx">Looks Like You Are Harboring a Fugitive!  Click On This Link to License Your Puppy Today</p>
                   </div>
                   <div class="alert alert-warning hidden" id="multiple-results">
-                    Every puppy is unique - but sometimes names are not. Please select a Zip and Breed.
+                    Every puppy is unique - but names are not. Please select a Postal Code and Breed.
                   </div>
 
                   <div class="alert alert-success hidden" id="match-results">
@@ -231,7 +231,7 @@
       <!-- footer ----------------------->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017 seaPUP-ID, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2017 seattlePUP-ID, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
     </div>
