--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active"><a href="#">About</a></li>
-              <li><a href="#licenseSearch">Pet Licensing</a></li>
-              <li><a href="#petLicenseSales">License Sales</a></li>
-              <li><a href="#offLeashContainer">Off-Leash</a></li>
+              <li><a href="#licenseNav">Pet Licensing</a></li>
+              <li><a href="#licenseSale">License Sales</a></li>
+              <li><a href="#offLeashNav">Off-Leash</a></li>
             </ul>
           </div>
         </div>
@@ -104,24 +104,20 @@
 
   <!-- /Carousel ----------------------->
   <!-- License ----------------------->
-    <div class="container resources">
-        <div class="row">
+  <div class="container resources">
+    <div class="row">
 
-  <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-    <div class="panel panel-default">
-      <div class="panel-heading" role="tab" id="headingOne">
-        <h4 class="panel-title">
-          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            Puppy ID Check
-          </a>
-        </h4>
-      </div>
-      <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-        <div class="panel-body">
-
-
-
-
+      <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+        <div class="panel panel-default">
+          <div class="panel-heading" role="tab" id="headingOne">
+            <h4 class="panel-title">
+              <a role="button" id="licenseNav" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                Puppy ID Check
+              </a>
+            </h4>
+          </div>
+          <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+            <div class="panel-body">
 
               <div class="col-sm-12 text-center">
                 <img class="img-circle status-pic" src="img/dogLicense.jpg" alt="License Check" width="140" height="140">
@@ -194,7 +190,7 @@
         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingTwo">
             <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              <a class="collapsed" id="licenseSale" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                 License Sales
               </a>
             </h4>
@@ -210,7 +206,7 @@
         <div class="panel panel-default">
           <div class="panel-heading" role="tab" id="headingThree">
             <h4 class="panel-title">
-              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              <a class="collapsed" id="offLeashNav" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                 Off Leash Parks
               </a>
             </h4>
