--- a/index.html
+++ b/index.html
@@ -219,10 +219,67 @@
             </div>
           </div>
         </div>
+
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingFour">
+          <h4 class="panel-title">
+            <a class="collapsed" id="offLeashNav" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              Lost Puppy Finder
+            </a>
+          </h4>
+        </div>
+        <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
+          <div class="panel-body">
+            <div class="col-xs-12 text-center" id="petChipScanner">
+            </div>
+
+            <div class="col-sm-12 text-center">
+              <img class="img-circle" src="img/RFID.jpg" alt="petChipScanner" width="140" height="140">
+
+
+              <form id="petChipScanner" method="post" class="form-horizontal">
+                <div class="form-group">
+                  <label for="microchipScan" class="control-label">Microchip Scan:</label>
+                  <input type="text" class="form-control" name="microchipScan" placeholder="Microchip Scan" id="microchipScan">
+
+                </div>
+
+                <div class="form-group">
+                  <label for="animalsname" class="control-label">Pet Name:</label>
+                  <input type="text" class="form-control" name="animalsname" placeholder="Microchip Scan Return" id="animalsname">
+
+                </div>
+
+                <div class="form-group">
+                  <label for="phone" class="control-label">Phone:</label>
+                  <input type="text" class="form-control" name="phone" placeholder="Microchip Scan Return" id="phone">
+
+                </div>
+
+                <div class="form-group">
+                  <label for="address" class="control-label">Address:</label>
+                  <input type="text" class="form-control" name="address" placeholder="Microchip Scan Return" id="address">
+
+                </div>
+
+                <div class="form-group">
+                  <label for="licenseNumber" class="control-label">License Number:</label>
+                  <input type="text" class="form-control" name="licenseNumber" placeholder="Microchip Scan Return" id="licNumber">
+
+                </div>
+
+                <div class="form-group">
+                  <label for="address" class="control-label">Issue Date:</label>
+                  <input type="text" class="form-control" name="issueDate" placeholder="Microchip Scan Return" id="IssDate">
+
+                </div>
+              </form>
+
+          </div>
+        </div>
       </div>
-
-
-
+    </div>
+  </div>
 
       <!-- footer ----------------------->
       <footer>
