--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               <li><a href="#licenseNav">Pet Licensing</a></li>
               <li><a href="#licenseSale">License Sales</a></li>
               <li><a href="#offLeashNav">Off-Leash</a></li>
+              <li><a href="#petFinder">Off-Leash</a></li>
             </ul>
           </div>
         </div>
@@ -223,7 +224,7 @@
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingFour">
           <h4 class="panel-title">
-            <a class="collapsed" id="offLeashNav" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            <a class="collapsed" id="petFinder" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
               Lost Puppy Finder
             </a>
           </h4>
