--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <li><a href="#licenseNav">Pet Licensing</a></li>
               <li><a href="#licenseSale">License Sales</a></li>
               <li><a href="#offLeashNav">Off-Leash</a></li>
-              <li><a href="#petFinder">Off-Leash</a></li>
+              <li><a href="#petFinder">Lost Pet Finder</a></li>
             </ul>
           </div>
         </div>
