--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <img class="first-slide" src="img/zillabeach.jpg" alt="First slide">
-        <div class="container">
+        <div class="container-fluid">
           <div class="carousel-caption">
             <p><a class="btn btn-sm btn-info" href="#licenseSearch" role="button">ID Check</a></p>
           </div>
@@ -105,7 +105,7 @@
 
   <!-- /Carousel ----------------------->
   <!-- License ----------------------->
-  <div class="container resources">
+  <div class="container-fluid resources">
     <div class="row">
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
