--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
 
       <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
+        <!-- <div class="container"> -->
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target ="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -48,13 +48,14 @@
           </div>
         </div>
       </nav>
-    </div>
+    <!-- </div> -->
   </div>
 
 
   <!-- /Navbar ------------------------>
 
   <!-- Carousel ------------------------>
+  <div class="container-fluid resources">
   <div id="myCarousel" class="carousel slide"  data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="myCarousel" data-slide-to="0" class="active"></li>
@@ -65,29 +66,29 @@
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <img class="first-slide" src="img/zillabeach.jpg" alt="First slide">
-        <div class="container-fluid">
+        <!-- <div class="container-fluid"> -->
           <div class="carousel-caption">
             <p><a class="btn btn-sm btn-info" href="#licenseSearch" role="button">ID Check</a></p>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
 
       <div class="item">
         <img class="second-slide" src="img/guvysleep.jpg" alt="Second Slide">
-        <div class="container">
+        <!-- <div class="container"> -->
           <div class="carousel-caption">
             <p><a class="btn btn-sm btn-info" href="#petLicenseSales" role="button">License Sales</a></p>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
 
       <div class="item">
         <img class="third-slide" src="img/guvypic.jpg" alt="Third Slide">
-        <div class="container">
+        <!-- <div class="container"> -->
           <div class="carousel-caption">
             <p><a class="btn btn-sm btn-info" href="#offLeashContainer" role="button">Off Leash Parks</a></p>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
     </div>
 
@@ -105,8 +106,8 @@
 
   <!-- /Carousel ----------------------->
   <!-- License ----------------------->
-  <div class="container-fluid resources">
-    <div class="row">
+  <div class="resources">
+        <div class="row">
 
       <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
@@ -281,6 +282,8 @@
       </div>
     </div>
   </div>
+</div>
+</div>
 
       <!-- footer ----------------------->
       <footer>
@@ -288,7 +291,6 @@
         <p>&copy; 2017 seattlePUP-ID, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
 
-    </div>
 
     <!-- /footer ----------------------->
 
