--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <!-- /Navbar ------------------------>
 
   <!-- Carousel ------------------------>
-  <div class="container-fluid resources">
+  <div class="container resources">
   <div id="myCarousel" class="carousel slide"  data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="myCarousel" data-slide-to="0" class="active"></li>
