--- a/index.html
+++ b/index.html
@@ -137,21 +137,21 @@
                         <div class="form-group">
                           <label for="animal_s_name" class="control-label">Pet Name:</label>
                           <input type="text" class="form-control" name="animal_s_name" placeholder="Enter Puppy's Name" id="animal_s_name">
+                          </div>
 
-                        </div>
 
                         <div id="extraFilters" class="hidden">
 
                           <div class="form-group">
                             <label for="zip_code" class="control-label">Postal Code:</label>
-                            <select class="form-control" id="zip_code" name="zip_code">
+                            <select class="form-control glowing-borderYellow" id="zip_code" name="zip_code">
                         <option value="" selected disabled>Please select</option>
                       </select>
                           </div>
 
                           <div class="form-group">
                             <label for="primary_breed" class="control-label">Breed:</label>
-                            <select class="form-control" id="primary_breed" name="primary_breed">
+                            <select class="form-control glowing-borderYellow" id="primary_breed" name="primary_breed">
                         <option value="" selected disabled>Please select</option>
                       </select>
                           </div>
@@ -161,17 +161,16 @@
 
                           <div class="form-group">
                             <label for="license_number" class="control-label">License Number:</label>
-                            <select class="form-control glowing-border" id="license_number" name="license_number">
-                      </select>
+                            <input id="license_number" type="text" class="form-control glowing-border" name="license_number" placeholder="license name" >
                           </div>
 
                           <div class="form-group">
                             <label for="license_issue_date" class="control-label">Issue Date:</label>
-                            <select class="form-control glowing-border" id="license_issue_date" name="license_issue_date">
-
-                      </select>
+                            <input id="license_issue_date" type="text" class="form-control glowing-border" name="license_issue_date" placeholder="issue date">
                           </div>
-                        </div>
+
+                          </div>
+
 
 
                         <div class="form-group">
