--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
             <div class="item active">
               <img class="first-slide" src="img/zillabeach.jpg" alt="First slide">
               <div class="carousel-caption">
-                <p><a class="btn btn-sm btn-info" href="#licenseSearch" role="button">ID Check</a></p>
+                <p><a class="btn btn-sm btn-info" href="#collapseOne" role="button">ID Check</a></p>
               </div>
             </div>
 
             <div class="item">
               <img class="second-slide" src="img/guvysleep.jpg" alt="Second Slide">
               <div class="carousel-caption">
-                <p><a class="btn btn-sm btn-info" href="#petLicenseSales" role="button">License Sales</a></p>
+                <p><a class="btn btn-sm btn-info" href="#collapseTwo" role="button">License Sales</a></p>
               </div>
             </div>
 
             <div class="item">
               <img class="third-slide" src="img/guvypic.jpg" alt="Third Slide">
               <div class="carousel-caption">
-                <p><a class="btn btn-sm btn-info" href="#offLeashContainer" role="button">Off Leash Parks</a></p>
+                <p><a class="btn btn-sm btn-info" href="#collapseThree" role="button">Off Leash Parks</a></p>
               </div>
             </div>
           </div>
